удаляет width и height

--- a/goit-js-hw-13-image-finder1/templates/articles.hbs
+++ b/goit-js-hw-13-image-finder1/templates/articles.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 <li class="photo-card">
-    <img src="{{webformatURL}}" data-src={{largeImageURL}} width="350" height="215" alt="img" />
+    <img src="{{webformatURL}}" data-src={{largeImageURL}} alt="img" />
 
     <div class="stats">
         <p class="stats-item">
