--- a/goit-js-hw-13-image-finder1/src/css/styles.css
+++ b/goit-js-hw-13-image-finder1/src/css/styles.css
@@ -1,18 +1,12 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 body {
   font-family: Roboto, sans-serif;
-  color: black;
-
-  text-align: center;
-  padding: 40px;
-
-  font-size: 24px;
   background-color: #ffffff;
+  text-align: center;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 .form-control {
@@ -73,24 +67,23 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: center;
-  padding: 15px;
+  margin-bottom: 10px;
+  padding-bottom: 50px;
 }
 
 img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 270px;
 }
 
 .photo-card {
-  width: 350px;
-  margin: 2px;
-  padding: 5px;
-  border: 2px solid#36454f;
-  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  width: 370px;
+  margin-bottom: 25px;
+  border-radius: 10px;
+  border: 2px solid black;
   overflow: hidden;
-  background-color: #ffffff;
 }
 
 .photo-card:hover {
